@startuml

class NewsAgency {
    - name: String
    + subscribe(channel: NewsChannel): void
    + broadcast(news: String): void
}

class NewsChannel {
    - name: String
    + receive(news: String): void
}

NewsAgency "1" --> "*" NewsChannel : subscribes
NewsChannel <-- NewsAgency : broadcasts

class App {
    + main(String[] args): void
}

App --> NewsAgency
App --> NewsChannel
@enduml

